test/ppx_repr/deriver/errors/unsupported_type_poly.ml
type t = { v : 'a. 'a } [@@deriving repr]
